[package]
name = "p0f_api"
version = "0.1.2"
authors = ["emk <rust@emk.one.pl>"]
license = "WTFPL OR MIT OR Apache-2.0"
description = "Interface for querying p0f unix socket API."
keywords = ["p0f"]
categories = ['api-bindings', 'network-programming']
repository = "https://github.com/emkw/rust-p0f_api.git"
readme = "README.md"
edition = '2015'
rust-version = '1.10'
